--- a/package.json
+++ b/package.json
@@ -11,19 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.6",
+    "@angular/animations": "^9.0.6",
+    "@angular/cdk": "^9.1.2",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
+    "@angular/material": "^9.1.2",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
-    "rxjs": "~6.5.4",
+    "angular2-prettyjson": "^3.0.1",
+    "bootstrap": "^4.4.1",
+    "eosjs": "^20.0.3",
+    "jquery": "^3.4.1",
+    "propper": "^1.0.3",
+    "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.900.6",
     "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
